ui_tests/type_def_res_3.stderr
error: failed to resolve `field_awd`
   ┌─ main.box:13:9
   │
13 │         field_awd: new FieldTy {},
   │         ^^^^^^^^^

error: failed to resolve `field`
   ┌─ main.box:17:9
   │
17 │         field: 10,
   │         ^^^^^

error: failed to resolve `Bazz`
   ┌─ main.box:20:14
   │
20 │     new Bar::Bazz {};
   │              ^^^^

error: failed to resolve `Blah`
   ┌─ main.box:22:9
   │
22 │     new Blah {};
   │         ^^^^

error: could not infer type
   ┌─ main.box:20:5
   │
20 │     new Bar::Bazz {};
   │     ^^^^^^^^^^^^^^^^

error: could not infer type
   ┌─ main.box:22:5
   │
22 │     new Blah {};
   │     ^^^^^^^^^^^

